--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -125,8 +125,19 @@
   <%= link_to 'Продажи', sales_path, class: 'btn-link' %>
 </nav>
 
-<div class="content">
-
+<div>
+  <div class="welcome-banner">
+    <h1>Добро пожаловать в <span class="highlight">GorillaCars</span>!</h1>
+    <p class="welcome-text">
+      Автосалон мечты, где каждая машина становится частью вашей истории. У нас вы найдете невероятный выбор автомобилей – от стильных городских седанов до мощных внедорожников и премиальных спорткаров.
+    </p>
+    <p class="welcome-text">
+      Мы предлагаем только проверенные автомобили, которые прошли полную диагностику и готовы к новым приключениям с вами. В <span class="highlight">GorillaCars</span> заботятся о каждом клиенте, поэтому мы обеспечиваем индивидуальный подход, прозрачные условия покупки и максимальный комфорт на каждом этапе выбора вашего авто.
+    </p>
+    <p class="welcome-text">
+      Ваша мечта о совершенной машине начинается здесь. Добро пожаловать в <span class="highlight">GorillaCars</span> – мы готовы удивлять!
+    </p>
+  </div>
 </div>
 </body>
 </html>
