--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,6 @@
 
 <body style="background-image: url('<%= asset_path('1.jpg') %>'); background-size: cover; background-position: center center; background-attachment: fixed; background-repeat: no-repeat; min-height: 100vh; color: white; font-family: Arial, sans-serif;">
 
-<!-- Навигация, которая будет отображаться на всех страницах -->
 
   <nav>
   <%= link_to 'Машины', cars_path, class: 'btn-link' %>
@@ -28,11 +27,13 @@
   <%= link_to 'Сотрудники', employees_path, class: 'btn-link' %>
   <%= link_to 'Продажи', sales_path, class: 'btn-link' %>
 </nav>
+<% if flash[:alert] %>
+  <p class="alert alert-danger"><%= flash[:alert] %></p>
+<% end %>
 
 
 
-<!-- Основное содержимое страницы -->
-<%= yield %> <!-- Контент каждой страницы будет вставлен сюда -->
+<%= yield %>
 
 </body>
 </html>
