--- a/app/views/cars/_form.html.erb
+++ b/app/views/cars/_form.html.erb
@@ -1,17 +1,46 @@
-<%= form_with(model: car) do |form| %>
+<%= form_with(model: car, local: true) do |form| %>
   <% if car.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(car.errors.count, "error") %> prohibited this car from being saved:</h2>
-
+    <div id="error_explanation">
+      <h2><%= pluralize(car.errors.count, "error") %> запрещают сохранить машину:</h2>
       <ul>
-        <% car.errors.each do |error| %>
-          <li><%= error.full_message %></li>
+        <% car.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
         <% end %>
       </ul>
     </div>
   <% end %>
 
-  <div>
+  <div class="field">
+    <%= form.label :brand %>
+    <%= form.text_field :brand %>
+  </div>
+
+  <div class="field">
+    <%= form.label :model %>
+    <%= form.text_field :model %>
+  </div>
+
+  <div class="field">
+    <%= form.label :price %>
+    <%= form.number_field :price %>
+  </div>
+
+  <div class="field">
+    <%= form.label :year %>
+    <%= form.number_field :year %>
+  </div>
+
+  <div class="field">
+    <%= form.label :description, "Описание машины" %>
+    <%= form.text_area :description, rows: 4 %>
+  </div>
+
+  <div class="field">
+    <%= form.label :images, "Загрузить изображения" %>
+    <%= form.file_field :images, multiple: true %>
+  </div>
+
+  <div class="actions">
     <%= form.submit %>
   </div>
 <% end %>
