--- a/app/views/cars/edit.html.erb
+++ b/app/views/cars/edit.html.erb
@@ -1,51 +1,5 @@
 <h1>Редактировать машину</h1>
 
-<%= form_with(model: @car, local: true) do |form| %>
-  <% if @car.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@car.errors.count, "error") %> запрещают сохранить машину:</h2>
-      <ul>
-        <% @car.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-
-  <div class="field">
-    <%= form.label :brand %>
-    <%= form.text_field :brand %>
-  </div>
-
-  <div class="field">
-    <%= form.label :model %>
-    <%= form.text_field :model %>
-  </div>
-
-  <div class="field">
-    <%= form.label :price %>
-    <%= form.number_field :price %>
-  </div>
-
-  <div class="field">
-    <%= form.label :year %>
-    <%= form.number_field :year %>
-  </div>
-
-  <div class="field">
-    <%= form.label :description, "Описание машины" %>
-    <%= form.text_area :description, rows: 4 %>
-  </div>
-
-  <div class="field">
-    <%= form.label :images, "Загрузить изображения" %>
-    <%= form.file_field :images, multiple: true %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit 'Обновить машину' %>
-  </div>
-<% end %>
+<%= render 'form', car: @car %>
 
 <%= link_to 'Назад', cars_path,class:'btn-back' %>
