--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -1,46 +1,5 @@
-<h1>Добавить машину</h1>
+<h1>Добавить новую машину</h1>
 
-<%= form_with(model: @car, local: true) do |form| %>
-  <% if @car.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@car.errors.count, "error") %> запрещают сохранить машину:</h2>
-      <ul>
-        <% @car.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+<%= render 'form', car: @car %>
 
-
-  <div class="field">
-    <%= form.label :brand %>
-    <%= form.text_field :brand %>
-  </div>
-
-  <div class="field">
-    <%= form.label :model %>
-    <%= form.text_field :model %>
-  </div>
-
-  <div class="field">
-    <%= form.label :price %>
-    <%= form.number_field :price %>
-  </div>
-
-  <div class="field">
-    <%= form.label :year %>
-    <%= form.number_field :year %>
-  </div>
-
-  <div class="field">
-    <%= form.label :images, "Загрузить изображения" %>
-    <%= form.file_field :images, multiple: true %> <!-- Позволяет загружать несколько изображений -->
-  </div>
-
-  <div class="actions">
-    <%= form.submit 'Добавить машину' %>
-  </div>
-<% end %>
-
-<%= link_to 'Назад', cars_path, class: 'btn-back' %>
+<%= link_to 'Назад', cars_path,class:'btn-back' %>
